--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,13 @@
     }, 
     "minimum-stability": "dev", 
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "bower-asset/jquery": "2.1.*@stable | 1.11.*@stable", 
+        "bower-asset/jquery.inputmask": "3.1.*", 
+        "bower-asset/punycode": "1.3.*"
     }, 
     "require-dev": {
+    	"leaps/bootstrap": "dev-master",
         "leaps/framework": "dev-master"
     }, 
     "config": {
@@ -32,14 +36,5 @@
             "npm-asset-library": "Vendor/npm", 
             "bower-asset-library": "Vendor/bower"
         }
-    }, 
-    "repositories": [
-        {
-            "type": "composer", 
-            "url": "http://packagist.phpcomposer.com"
-        }, 
-        {
-            "packagist": false
-        }
-    ]
+    }
 }
